
        - order_by now can take \[$sql, @bind] as in
          order_by => { -desc => \['colA LIKE ?', 'somestring'] }
        - SQL::Abstract errors are now properly croak()ed with the
          correct trace
        - populate() now properly reports the dataset slice in case of
          an exception
        - fixed corner case when populate() erroneously falls back to
          create()

0.08103 2009-05-26 19:50:00 (UTC)
        - Multiple $resultset -> count/update/delete fixes. Now any
          of these operations will succeed, regardless of the complexity
          of $resultset. distinct, group_by, join, prefetch are all
          supported with expected results
        - Return value of $rs->delete is now the storage return value
          and not 1 as it used to be
        - don't pass SQL functions into GROUP BY
        - Remove MultiDistinctEmulation.pm, effectively deprecating
          { select => { distinct => [ qw/col1 col2/ ] } }
        - Change ->count code to work correctly with DISTINCT (distinct => 1)
          via GROUP BY
        - Removed interpolation of bind vars for as_query - placeholders
          are preserved and nested query bind variables are properly 
          merged in the correct order
        - Refactor DBIx::Class::Storage::DBI::Sybase to automatically 
          load a subclass, namely Microsoft_SQL_Server.pm
          (similar to DBIx::Class::Storage::DBI::ODBC)
        - Refactor InflateColumn::DateTime to allow components to
          circumvent DateTime parsing
        - Support inflation of timestamp datatype
        - Support BLOB and CLOB datatypes on Oracle
        - Storage::DBI::Replicated::Balancer::Random:
          added master_read_weight
        - Storage::DBI::Replicated: storage opts from connect_info,
          connect_info merging to replicants, hashref connect_info support,
          improved trace output, other bug fixes/cleanups
        - distinct => 1 with prefetch now groups by all columns